--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
   <title>MindTroopers</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://unpkg.com/bootstrap@4.1.0/dist/css/bootstrap.min.css">
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
 
 </head>
